argocd/applications/rails-latest/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails-latest
  labels:
    app.kubernetes.io/name: rails-latest
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: rails-latest
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 80
      targetPort: http
