argocd/applications/rails-latest/base/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rails-latest
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`rails-latest.lab.ts.net`)
      services:
        - name: rails-latest
          port: 80
